--- a/tiny-mvc-core/pom.xml
+++ b/tiny-mvc-core/pom.xml
@@ -46,15 +46,23 @@
             <artifactId>log4j-api</artifactId>
             <version>2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.2</version>
         </dependency>
 
     </dependencies>
