--- a/tiny-mvc-core/src/test/resources/tiny-mvc.properties
+++ b/tiny-mvc-core/src/test/resources/tiny-mvc.properties
@@ -1,2 +1,2 @@
-package.path=tinymvc.core.utils.classutil.classutilpkg
+package.path=com.mantou.tinymvc.core.utils.classutil.classutilpkg
 user=mantou
